# rules_qtpl

./: BUILD.bazel  LICENSE  MODULE.bazel  go.mod  import.go
examples/: README.md
examples/quicktemplate_readme/: BUILD.bazel  main.go
examples/quicktemplate_readme/templates/: BUILD.bazel
qtpl/: qtpl.bzl
